dfir_rs/tests/compile-fail-stable/surface_handoff_generics.rs
../compile-fail/surface_handoff_generics.rs